@@ -1817,3 +1817,4 @@ Version		Change Log
 	Big revisions to SimpleShortStatistics and its relationships to KozaShortStatistics
 	Deleted San Marino Problem
 	Default run-evolve setting for ec/eval/slave.params set to false
+	Removed EdgeShortStatistics
